--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "svelte": "^3.44.0",
     "vite": "^2.9.9"
+  },
+  "dependencies": {
+    "@emotion/css": "^11.9.0",
+    "emotion": "^11.0.0"
   }
 }
